--- a/Frontend/webpage/css/services.css
+++ b/Frontend/webpage/css/services.css
@@ -1,3 +1,4 @@
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
 .category-card .card-banner {
 	border-radius: var(--radius-10);
@@ -300,18 +301,12 @@ tbody:nth-child(even) {
 }
 
 .dropbtn {
-	background-color: #3498DB;
-	color: white;
-	padding: 16px;
-	font-size: 16px;
+padding: 16px;
 	border: none;
 	cursor: pointer;
 }
 
-.dropbtn:hover,
-.dropbtn:focus {
-	background-color: #2980B9;
-}
+
 
 .dropdown {
 	position: relative;
@@ -342,9 +337,7 @@ tbody:nth-child(even) {
 .dropdown:hover {
 	display: block;
 }
-#aa{
-	margin-top: 120px;
-}
+
 #cart-table{
 	margin-top: 120px;
 }
@@ -600,4 +593,231 @@ span {
 
 .im{
 	padding-left: 40px;
+}
+
+
+
+
+
+.f{
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	height: 100vh;
+	position: absolute;
+	top:70px;
+	right:750px;
+	
+
+
+}
+.f1 {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	height: 110vh;
+	position: absolute;
+	top: 110px;
+	right: 750px;
+
+}
+.f3 {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	height: 110vh;
+	position: absolute;
+	top: 75px;
+	right: 750px;
+
+}
+.lg{
+	   width: 50vw;
+	   padding-left: 112%;
+	   position:absolute;
+	   top:17px;
+	   overflow-y: hidden;
+}
+.lk{
+	    width: 50vw;
+		padding-left: 112%;
+		position: absolute;
+		top: 46px;
+		overflow-y: hidden;
+}
+.lt {
+	width: 60vw;
+	padding-left: 112%;
+	position: absolute;
+	top: 46px;
+	overflow-y: hidden;
+}
+.form {
+	background-color: #6e6ef8;
+	border-radius: 20px;
+	box-sizing: border-box;
+	height: 500px;
+	padding: 20px;
+	width: 400px;
+	padding-top: 30px;
+	
+}
+.form3 {
+	background-color: #6e6ef8;
+	border-radius: 20px;
+	box-sizing: border-box;
+	height: 580px;
+	padding: 20px;
+	width: 420px;
+	padding-top: 30px;
+
+}
+.form1 {
+	background-color:#6e6ef8;
+	border-radius: 20px;
+	box-sizing: border-box;
+	height: 625px;
+	padding: 20px;
+	width: 420px;
+	padding-top: 30px;
+
+}
+
+.title {
+	color: whitesmoke;
+	font-family: sans-serif;
+	font-size: 36px;
+	font-weight: 600;
+	margin-top: 15px;
+	padding-left: 90px;
+}
+.title2 {
+	color: whitesmoke;
+	font-family: sans-serif;
+	font-size: 36px;
+	font-weight: 600;
+	margin-top: 15px;
+	padding-left: 60px;
+}
+.title3 {
+	color: whitesmoke;
+	font-family: sans-serif;
+	font-size: 36px;
+	font-weight: 600;
+	margin-top: 15px;
+	padding-left: 30px;
+}
+.title4 {
+	color: whitesmoke;
+	font-family: sans-serif;
+	font-size: 36px;
+	font-weight: 600;
+	margin-top: 15px;
+	padding-left: 65px;
+}
+
+.btnc{
+	margin-top: 20px;
+	padding-left: 100px;
+}
+
+.input-container {
+	height: 50px;
+	position: relative;
+	width: 100%;
+}
+
+
+.ic2 {
+	margin-top: 15px;
+}
+
+.input-container input {
+	border: none;
+	outline: none;
+	border-radius: 12px;
+	
+	box-sizing: border-box;
+	
+	font-size: 18px;
+	height: 90%;
+	
+	padding: 4px 10px 0;
+	width: 100%;
+}
+
+.impl{
+	padding-left: 40px;
+	padding-top: 30px;
+}
+.imp2 {
+	padding-left: 40px;
+	padding-top: 400px;
+}
+.imp3 {
+	padding-left: 40px;
+	padding-top: 280px;
+}
+
+.imps{
+	width:300px
+}
+
+
+.abc{
+	color: black;
+	font-size: 20px;
+}
+
+#createProductFormFile>input {
+	display: flex;
+	padding:0%;
+	position:relative;
+	right:50px;
+	
+}
+
+#createProductFormFile>input::file-selector-button {
+	cursor: pointer;
+	width: 100%;
+	border-radius: 12px;
+	height: 7vh;
+	border: none;
+	margin: 0%;
+	font: 800 4vmax ;
+	transition: all 0.5s;
+   color: rgba(0, 0, 0, 0.623);
+	background-color: rgb(255, 255, 255);
+}
+
+#createProductFormFile>input::file-selector-button:hover {
+	background-color: rgb(235, 235, 235);
+}
+
+
+
+.footer {
+	position: absolute;
+	top: 1430px;
+	left: 0;
+	right: 0;
+	padding: 1.5rem;
+	background:#E3E6F3;
+	color: grey;
+	font-weight: 500;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 0.2rem;
+}
+:root {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+}
+
+body {
+	height: 100vh;
+
 }
