--- a/Frontend/webpage/css/home.css
+++ b/Frontend/webpage/css/home.css
@@ -6,7 +6,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 10px 70px;
+	padding: 10px 73px;
 	background: #E3E6F3;
 	box-shadow: 0 5px 50px rgba(0, 0, 0, 0);
 	box-sizing: content-box;
@@ -95,16 +95,15 @@ html{
 .dropdown-content {
 	display: none;
 	position: absolute;
-	background-color: #f1f1f1;
-	min-width: 160px;
+	background: #E3E6F3;
+	min-width: 110px;
 	overflow: hidden;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
 }
 
 .dropdown-content a {
 	color: black;
-	padding: 12px 16px;
+	padding: 5px 5px;
 	text-decoration: none;
 	display: block;
 }
