--- a/Frontend/webpage/css/services.css
+++ b/Frontend/webpage/css/services.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
 .category-card .card-banner {
 	border-radius: var(--radius-10);
@@ -84,11 +83,13 @@
 }
 
 #pro-container {
-	display: flex;
-	justify-content: space-between;
-	
-	
+    display: flex;
+	flex-wrap: wrap;
+   justify-content: center;
+	min-height: 30vh;
+		min-width: 80vw;
 }
+
 
 .pro {
 	min-width: 300px;
@@ -100,7 +101,7 @@
 	margin: 15px 10px;
 	transition: 0.02s;
 	position: relative;
-	height:57vh;
+	height:53vh;
 }
 
 .pro:hover {
@@ -109,7 +110,7 @@
 
 .pro img {
 	display: block;
-	width: 100%;
+	width: 300px;
 	height: 240px;
 	border: 1px solid #afafaf;
 	border-bottom: 0;
@@ -121,13 +122,15 @@
 
 .pro .fd-b {
 	width: 55px;
-	height: 35px;
+	height: 40px;
 	line-height: 40px;
 	font-weight: 500;
 	color: #088178;
 	border: 1px solid #cce7d0;
 	position: absolute;
-	bottom: 20px;
+	border-radius: 10px;
+	position: absolute;
+	bottom: 10px;
 	right: 25px;
 }
 
@@ -178,7 +181,7 @@ ul {
 }
 
 #main-content {
-	margin-top: 150px;
+	margin-top: 20px;
 }
 
 #main-content>section.section.category::--webkit-scrollbar {
@@ -218,16 +221,11 @@ th {
 tbody:nth-child(even) {
 	background-color: #dddddd;
 }
-
 #header {
-	position: fixed;
-	top: 0px;
-	width: 87.5vw;
-	z-index: 100;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 10px 70px;
+	padding: 10px 73px;
 	background: #E3E6F3;
 	box-shadow: 0 5px 50px rgba(0, 0, 0, 0);
 	box-sizing: content-box;
@@ -237,6 +235,7 @@ tbody:nth-child(even) {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+
 }
 
 #navbar li {
@@ -247,7 +246,7 @@ tbody:nth-child(even) {
 
 #navbar li a {
 	text-decoration: none;
-	font-size: 30px;
+	font-size: 26px;
 	font-weight: 600;
 	color: black;
 	transition: 0.3s ease;
@@ -299,9 +298,8 @@ tbody:nth-child(even) {
 	font-family: sans-serif;
 	color: white;
 }
-
 .dropbtn {
-padding: 16px;
+	padding: 16px;
 	border: none;
 	cursor: pointer;
 }
@@ -316,16 +314,15 @@ padding: 16px;
 .dropdown-content {
 	display: none;
 	position: absolute;
-	background-color: #f1f1f1;
-	min-width: 160px;
+	background: #E3E6F3;
+	min-width: 100px;
 	overflow: hidden;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
 }
 
 .dropdown-content a {
 	color: black;
-	padding: 12px 16px;
+	padding: 5px 8px;
 	text-decoration: none;
 	display: block;
 }
@@ -339,7 +336,7 @@ padding: 16px;
 }
 
 #cart-table{
-	margin-top: 120px;
+	margin-top: 30px;
 }
 input[type="text"], input[type="text"], input[type="text"], input[type="text"], textarea {
 	width: 100%;
@@ -613,12 +610,12 @@ span {
 }
 .f1 {
 	align-items: center;
-	display: flex;
+	
 	justify-content: center;
 	height: 110vh;
 	position: absolute;
-	top: 110px;
-	right: 750px;
+	top: 130px;
+	right: 450px;
 
 }
 .f3 {
@@ -627,23 +624,19 @@ span {
 	justify-content: center;
 	height: 110vh;
 	position: absolute;
-	top: 75px;
-	right: 750px;
+	top: 77px;
+	right: 450px;
 
 }
 .lg{
-	   width: 50vw;
-	   padding-left: 112%;
-	   position:absolute;
-	   top:17px;
-	   overflow-y: hidden;
+      width:30vw;	   
+	   padding-left: 200%;
+	  
+	
 }
 .lk{
-	    width: 50vw;
-		padding-left: 112%;
-		position: absolute;
-		top: 46px;
-		overflow-y: hidden;
+			width: 40vw;
+				padding-left: 150%;
 }
 .lt {
 	width: 60vw;
@@ -801,10 +794,10 @@ span {
 	top: 1430px;
 	left: 0;
 	right: 0;
-	padding: 1.5rem;
-	background:#E3E6F3;
-	color: grey;
+	padding: 2rem;
+    color: #000;
 	font-weight: 500;
+	font-size: 18px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -821,3 +814,59 @@ body {
 	height: 100vh;
 
 }
+
+.obt{
+ padding-left: 590px;	
+ padding-top: 30px;
+}
+
+.f5{
+			align-items: center;
+			display: flex;
+			justify-content: center;
+			height: 110vh;
+			position: absolute;
+			top: 255px;
+			left: 480px;
+
+}
+.form5{
+		   background-color: #6e6ef8;
+			border-radius: 20px;
+			box-sizing: border-box;
+			height: 720px;
+			padding: 20px;
+			width: 420px;
+			padding-top: 30px;
+}
+.title6{
+		color: whitesmoke;
+			font-family: sans-serif;
+			font-size: 36px;
+			font-weight: 600;
+			margin-top: 15px;
+			padding-left: 25px;
+}
+.title7 {
+	color: whitesmoke;
+	font-family: sans-serif;
+	font-size: 20px;
+	font-weight: 600;
+	margin-top: 15px;
+	padding-left: 95px;
+}
+
+.label{
+	color: white;
+	font-weight: 700;
+
+}
+.obt1 {
+	padding-left: 60px;
+	padding-top: 20px;
+	
+}
+.bkc{
+	width: 250px;
+}
+
